move unavoidable whitespace to the right to avoid big gap on hires screens (lotte)

--- a/web/css/annotation.css
+++ b/web/css/annotation.css
@@ -7,7 +7,7 @@ body {
 
 /* layout */
 #layout {
-	width: 90%
+	width: 95%
 	margin: 0 auto;
 	padding: 1%;
 	background-color: #FFF;
@@ -20,13 +20,12 @@ body {
 }
 
 #media {
-	width: 64%;
+	max-width: 64%;
 }
 
 #media .resource { text-align: center }
 #media img {
 	max-width: 90%;
-	max-height: 600px;
 }
 #media .title .metalabel { display: none }
 #media .description .metalabel { display: none }
